fixing an accessibility issue

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-  <section class="cards">
+  <main class="cards">
     <div class="card one">
       <img src="./images/icon-sedans.svg" alt="sedan">
       <h1>Sedans</h1>
@@ -51,7 +51,7 @@
       </p>
       <button>Learn more</button>
     </div>
-  </section>
+  </main>
   
 </body>
 </html>
